--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
 <head>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
+  <link rel='stylesheet'
+    href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <title style="font-family: Lexend;">Travigo | Travel with ease</title>
   <link rel="stylesheet" href="css/styles.css">
@@ -156,7 +161,6 @@
       </div>
     </div>
     <div class="top-selling">
-
       <div class="destination">
         <img src="img/rome.png" alt="colosium">
         <img class="img-text" src="img/rome-text.png" alt="colosium">
@@ -172,10 +176,253 @@
     </div>
     </div>
   </section>
-  <!--Footer-->
-  <footer>
+  <section class="booking">
+    <div class="booking-description">
 
-  </footer>
+      <div class="home-text-2">
+        <p>
+          Easy and Fast
+        </p>
+      </div>
+      <div class="home-text-1">
+        <p>
+          Book Your Next Trip<br>
+          In 3 Easy Steps
+        </p>
+      </div>
+      <div class="booking-tips-box">
+        <div class="booking-tips">
+          <div>
+            <img src="img/book-choose.png" alt="decoration">
+          </div>
+          <div class="booking-text">
+            <div class="home-text-2" style="font-weight: bold; padding-bottom: 0;">
+              <p>
+                Choose Destination
+              </p>
+            </div>
+            <div class="home-text-2" style="font-weight: 400; line-height: 25px;">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipiscing elit. Urna, tortor tempus.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="booking-tips">
+          <div>
+            <img src="img/book-payement.png" alt="water swiming">
+          </div>
+          <div class="booking-text">
+            <div class="home-text-2" style="font-weight: bold; padding-bottom: 0;">
+              <p>
+                Make Payment
+              </p>
+            </div>
+            <div class="home-text-2" style="font-weight: 400; line-height: 25px;">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipiscing elit. Urna, tortor tempus.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="booking-tips">
+          <div>
+            <img src="img/book-transport.png" alt="car">
+          </div>
+          <div class="booking-text">
+            <div class="home-text-2" style="font-weight: bold; padding-bottom: 0;">
+              <p>
+                Reach Airport on Selected Date
+              </p>
+            </div>
+            <div class="home-text-2" style="font-weight: 400; line-height: 25px;">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipiscing elit. Urna, tortor tempus.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="london">
+      <img src="img/london-text.png" alt="bing bang tower" style="border-radius: 24px;">
+    </div>
+    <div id="full-europe">
+      <img src="img/full-europe-text.png" alt="helsinki cathedrale" style="border-radius: 24px;">
+    </div>
+    <div id="blue-shadow">
+      <img src="img/shadow-blue.png" alt="blue shadow">
+    </div>
+  </section>
+  <section class="testimonials">
+    <div class="testimonials-text">
+      <div class="home-text-2" style="padding-bottom: 0;">
+        <p>
+          TESTIMONIALS
+        </p>
+      </div>
+      <div class="home-text-1">
+        <p>
+          What People Say<br>
+          About Us.
+        </p>
+      </div>
+    </div>
+    <div class="testemon">
+      <div class="testemon-text">
+        <div class="home-text-2">
+          <p>
+            “On the Windows talking painted pasture yet its<br>express parties use. Sure last upon he same as<br>knew
+            next. Of believed or diverted no.”
+          </p>
+        </div>
+        <div class="home-text-3">
+          <div>
+            <p style="font-weight: 600;">
+              Mike Taylor
+            </p>
+          </div>
+          <div>
+            <p>
+              Lahore, Pakistan
+            </p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="img/testemon.png" alt="smiling-man">
+      </div>
+
+    </div>
+    <div class="up-down-scroll">
+      <div class="up-direct">
+        <i class="fi fi-rr-angle-small-up"></i>
+      </div>
+      <div class="down-direct">
+        <i class="fi fi-rr-angle-small-down"></i>
+      </div>
+    </div>
+  </section>
+  <section class="logos">
+    <div>
+      <img src="img/axon-logo.png" alt="Axon Airlines" style="padding-bottom: 19px;">
+    </div>
+    <div>
+      <img src="img/jetsstar-logos.png" alt="Jetsstar" style="padding-bottom: 20px;">
+    </div>
+    <div>
+      <img src="img/expedia-logo.png" alt="Expedia" style="padding-bottom: 14px;">
+    </div>
+    <div>
+      <img src="img/qantas-logo.png" alt="qantas" style="padding-bottom: 30px;">
+    </div>
+    <div>
+      <img src="img/alitalia-logo.png" alt="alitalia" style="padding-bottom: 43px;">
+    </div>
+  </section>
+  <section class="newslettre">
+    <div class="newsletter-contenu">
+      <img src="img/newslettre-background.png" alt="decoration" style="transform: scale(1.4);">
+      <div class="newslettre-text">
+        <p>
+          Subscribe to get information, latest news and other<br>
+          interesting offers about Travigo
+        </p>
+      </div>
+      <div class="submiting">
+        <div>
+          <input class="email" type="text" placeholder="Your email">
+        </div>
+        <div>
+          <button class="Subscribe">Subscribe</button>
+        </div>
+      </div>
+    </div>
+    <div class="send">
+      <img src="img/send.png" alt="send icon">
+    </div>
+    <div class="newslettre-decoration">
+      <img src="img/newslettre-decoration.png" alt="decoration" style="padding-right: 0px;">
+    </div>
+  </section>
+  <!--Footer-->
+  <section class="footer">
+    <div class="footer-column-1">
+      <div>
+        <div class="footer-text-1">
+          <a href="index.html">Travigo.</a>
+        </div>
+        <div class="footer-text-2">
+          <p>
+            Book your trip in minute, get full<br>
+            Control for much longer.
+
+          </p>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            Company
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="about.html">About</a>
+          <a href="#">Team</a>
+          <a href="#">Mobile</a>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            Contact
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="#">Help/FAQ</a>
+          <a href="contact.html">Contact</a>
+          <a href="#">Address </a>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            More
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="destinations.html">Flights</a>
+          <a href="#">Hotels</a>
+          <a href="#">Booking</a>
+        </div>
+      </div>
+      <div class="discover">
+        <div>
+          <img src="img/facebook-icon.png" alt="facebook logo">
+          <img src="img/instagram-icon.png" alt="instagram logo">
+          <img src="img/twitter-icon.png" alt="twitter logo">
+        </div>
+        <div class="footer-text-4">
+          <p>
+            Discover our app
+          </p>
+        </div>
+        <div>
+          <img src="img/Google-Play.png" alt="Google Play Store">
+          <img src="img/app-Store.png" alt="Apple App Store">
+        </div>
+      </div>
+    </div>
+    <div class="copyrights">
+      <p class="footer-text-2">
+        All rights reserved@genZdevs.co
+      </p>
+    </div>
+  </section>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 
