making more progress

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
       </div>
     </div>
   </section>
+  <!--collaboration logos-->
   <section class="logos">
     <div>
       <img src="img/axon-logo.png" alt="Axon Airlines" style="padding-bottom: 19px;">
@@ -324,6 +325,7 @@
       <img src="img/alitalia-logo.png" alt="alitalia" style="padding-bottom: 43px;">
     </div>
   </section>
+  <!--Newsletter Section-->
   <section class="newslettre">
     <div class="newsletter-contenu">
       <img src="img/newslettre-background.png" alt="decoration" style="transform: scale(1.4);">
@@ -335,7 +337,7 @@
       </div>
       <div class="submiting">
         <div>
-          <input class="email" type="text" placeholder="Your email">
+          <input class="email" type="email" placeholder="Your email">
         </div>
         <div>
           <button class="Subscribe">Subscribe</button>
