--- a/about.html
+++ b/about.html
@@ -1,5 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+
+<head>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
+  <link rel='stylesheet'
+    href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <title style="font-family: Lexend;">Travigo | About Us</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <a href="index.html">Travigo</a>
+    </div>
+    <ul class="nav-bar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="destinations.html">Destinations</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a class="sign-up" href="sign-up.html">Sign Up</a></li>
+      <li> <select id="language" name="language">
+          <option>EN</option>
+          <option>FR</option>
+          <option>AR</option>
+        </select>
+      </li>
+    </ul>
+    <div>
+      <img class="menu-icon" src="img/menu.png" alt="menu">
+    </div>
+  </header>
+  <!--About Us page contenu section-->
+  <section class="hero">
+    <div class="about">
+      <div class="home-text-1">
+        <p>
+          About Us
+        </p>
+      </div>
+    </div>
+    <div class="About">
+      <div class="home-text-2" style="padding-top: 50px;">
+        <p>
+          Founded in 2005 by three university friends in<br>Düsseldorf (Germany), trivago has since<br>become a leading
+          global accommodation<br>search website. We are focused on reshaping<br>the way millions of travelers search
+          for and<br>compare hotels and other accommodations.<br>Part of Expedia Group (NASDAQ: TRVG),
+          trivago’s<br>mission is to become your companion to<br>experience our world.
+        </p>
+      </div>
+
+      <div>
+        <img src="img/about-us-img-1.png" alt="two boats">
+      </div>
+    </div>
+
+  </section>
+  <script type="text/javascript" src="js/script.js"></script>
+</body>
+
 </html>
