--- a/destinations.html
+++ b/destinations.html
@@ -1,5 +1,220 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+
+<head>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
+  <link rel='stylesheet'
+    href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <title style="font-family: Lexend;">Travigo | Destinations</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <a href="index.html">Travigo</a>
+    </div>
+    <ul class="nav-bar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="destinations.html">Destinations</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a class="sign-up" href="sign-up.html">Sign Up</a></li>
+      <li> <select id="language" name="language">
+          <option>EN</option>
+          <option>FR</option>
+          <option>AR</option>
+        </select>
+      </li>
+    </ul>
+    <div>
+      <img class="menu-icon" src="img/menu.png" alt="menu">
+    </div>
+  </header>
+  <!--destinations page contenu section-->
+  <section class="hero">
+    <div class="destination">
+      <div class="home-text-1">
+        <p>
+          Destinations
+        </p>
+      </div>
+      <div class="destination-available">
+        <div class="destination-information">
+          <img src="img/rome-text.png" alt="colosium">
+        </div>
+        <div class="destination-information">
+          <img src="img/london-text.png" alt="bing bang tower">
+        </div>
+        <div class="destination-information">
+          <img src="img/full-europe-text.png" alt="helsinki cathedrale">
+        </div>
+        <div class="destination-information">
+          <img src="img/paris-text.png" alt="eiffel tower">
+        </div>
+        <div class="destination-information">
+          <img src="img/budapest-text.png" alt="budapest">
+        </div>
+        <div class="destination-information">
+          <img src="img/colorado-text.png" alt="colorado">
+        </div>
+        <div class="destination-information">
+          <img src="img/siberia-text.png" alt="siberia">
+        </div>
+        <div class="destination-information">
+          <img src="img/san-francisco-text.png" alt="golden bridge">
+        </div>
+        <div class="destination-information">
+          <img src="img/positano-text.png" alt="positano">
+        </div>
+      </div>
+      <div class="Upcoming-packages">
+        <div class="home-text-1">
+          <p style="text-align: center;">
+            Our Upcoming<br>Tour Package
+          </p>
+        </div>
+        <div class="tour-package">
+          <div class="destination-information">
+            <img src="img/machu-pichu-package.png" alt="machu pichu temple">
+          </div>
+          <div class="destination-information">
+            <img src="img/sibenik-package.png" alt="sibenik">
+          </div>
+          <div class="destination-information">
+            <img src="img/mount-kimulu-package.png" alt="mount kimulu">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--collaboration logos-->
+    <section class="logos">
+      <div>
+        <img src="img/axon-logo.png" alt="Axon Airlines" style="padding-bottom: 19px;">
+      </div>
+      <div>
+        <img src="img/jetsstar-logos.png" alt="Jetsstar" style="padding-bottom: 20px;">
+      </div>
+      <div>
+        <img src="img/expedia-logo.png" alt="Expedia" style="padding-bottom: 14px;">
+      </div>
+      <div>
+        <img src="img/qantas-logo.png" alt="qantas" style="padding-bottom: 30px;">
+      </div>
+      <div>
+        <img src="img/alitalia-logo.png" alt="alitalia" style="padding-bottom: 43px;">
+      </div>
+    </section>
+    <!--Newsletter Section-->
+    <section class="newslettre">
+      <div class="newsletter-contenu">
+        <img src="img/newslettre-background.png" alt="decoration" style="transform: scale(1.4);">
+        <div class="newslettre-text">
+          <p>
+            Subscribe to get information, latest news and other<br>
+            interesting offers about Travigo
+          </p>
+        </div>
+        <div class="submiting">
+          <div>
+            <input class="email" type="email" placeholder="Your email">
+          </div>
+          <div>
+            <button class="Subscribe">Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <div class="send">
+        <img src="img/send.png" alt="send icon">
+      </div>
+      <div class="newslettre-decoration">
+        <img src="img/newslettre-decoration.png" alt="decoration" style="padding-right: 0px;">
+      </div>
+    </section>
+    <!--Footer-->
+    <section class="footer">
+      <div class="footer-column-1">
+        <div>
+          <div class="footer-text-1">
+            <a href="index.html">Travigo.</a>
+          </div>
+          <div class="footer-text-2">
+            <p>
+              Book your trip in minute, get full<br>
+              Control for much longer.
+
+            </p>
+          </div>
+        </div>
+        <div>
+          <div class="footer-text-3">
+            <p>
+              Company
+            </p>
+          </div>
+          <div class="footer-links">
+            <a href="about.html">About</a>
+            <a href="#">Team</a>
+            <a href="#">Mobile</a>
+          </div>
+        </div>
+        <div>
+          <div class="footer-text-3">
+            <p>
+              Contact
+            </p>
+          </div>
+          <div class="footer-links">
+            <a href="#">Help/FAQ</a>
+            <a href="contact.html">Contact</a>
+            <a href="#">Address </a>
+          </div>
+        </div>
+        <div>
+          <div class="footer-text-3">
+            <p>
+              More
+            </p>
+          </div>
+          <div class="footer-links">
+            <a href="destinations.html">Flights</a>
+            <a href="#">Hotels</a>
+            <a href="#">Booking</a>
+          </div>
+        </div>
+        <div class="discover">
+          <div>
+            <img src="img/facebook-icon.png" alt="facebook logo">
+            <img src="img/instagram-icon.png" alt="instagram logo">
+            <img src="img/twitter-icon.png" alt="twitter logo">
+          </div>
+          <div class="footer-text-4">
+            <p>
+              Discover our app
+            </p>
+          </div>
+          <div>
+            <img src="img/Google-Play.png" alt="Google Play Store">
+            <img src="img/app-Store.png" alt="Apple App Store">
+          </div>
+        </div>
+      </div>
+      <div class="copyrights">
+        <p class="footer-text-2">
+          All rights reserved@genZdevs.co
+        </p>
+      </div>
+    </section>
+  </section>
+  <script type="text/javascript" src="js/script.js"></script>
+</body>
+
 </html>
