"adding Contact us page"

--- a/about.html
+++ b/about.html
@@ -62,7 +62,144 @@
         <img src="img/about-us-img-1.png" alt="two boats">
       </div>
     </div>
+    <div class="About-2">
+      <div>
+        <img src="img/about-us-img-2.png" alt="morocco best places">
+      </div>
+      <div class="home-text-2">
+        <p>
+          we organize perfect trips all over Morocco. We want you to enjoy and be<br>moved by your experience here,
+          whether it’s your first time, or a return trip.<br>We want you to see our beautiful country in the way you
+          want to. We will<br>design a trip that suits the way you travel, and what you value. Do you<br>want Luxury?
+          Adventure? Simplicity? There are so many ways to focus your<br>time here, let’s choose the right things for
+          you. Throughout, OmegaTours<br>takes care of everything, from the day you land, until the moment we
+          say<br>goodbye at the airport. We handle all the logistics: in-country travel<br>planning; book
+          accommodations; and provide comfortable, private<br>transportation. But the most important thing is our
+          people: Omega’s<br>knowledgeable, friendly guides and drivers know and love this land, and<br>love to share it
+          with visitors. We also have a wonderful network of people to<br>host and help you go deeper in what you care
+          to see: the freedom to<br>explore in balance with your safety. Come and see Morocco with us!<br>You won’t be
+          disappointed.
+        </p>
+      </div>
+    </div>
+    <!--collaboration logos-->
+    <section class="logos">
+      <div>
+        <img src="img/axon-logo.png" alt="Axon Airlines" style="padding-bottom: 19px;">
+      </div>
+      <div>
+        <img src="img/jetsstar-logos.png" alt="Jetsstar" style="padding-bottom: 20px;">
+      </div>
+      <div>
+        <img src="img/expedia-logo.png" alt="Expedia" style="padding-bottom: 14px;">
+      </div>
+      <div>
+        <img src="img/qantas-logo.png" alt="qantas" style="padding-bottom: 30px;">
+      </div>
+      <div>
+        <img src="img/alitalia-logo.png" alt="alitalia" style="padding-bottom: 43px;">
+      </div>
+    </section>
+    <!--Newsletter Section-->
+    <section class="newslettre">
+      <div class="newsletter-contenu">
+        <img src="img/newslettre-background.png" alt="decoration" style="transform: scale(1.4);">
+        <div class="newslettre-text">
+          <p>
+            Subscribe to get information, latest news and other<br>
+            interesting offers about Travigo
+          </p>
+        </div>
+        <div class="submiting">
+          <div>
+            <input class="email" type="email" placeholder="Your email">
+          </div>
+          <div>
+            <button class="Subscribe">Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <div class="send">
+        <img src="img/send.png" alt="send icon">
+      </div>
+      <div class="newslettre-decoration">
+        <img src="img/newslettre-decoration.png" alt="decoration" style="padding-right: 0px;">
+      </div>
+    </section>
+    <!--Footer-->
+    <section class="footer">
+      <div class="footer-column-1">
+        <div>
+          <div class="footer-text-1">
+            <a href="index.html">Travigo.</a>
+          </div>
+          <div class="footer-text-2">
+            <p>
+              Book your trip in minute, get full<br>
+              Control for much longer.
 
+            </p>
+          </div>
+        </div>
+        <div>
+          <div class="footer-text-3">
+            <p>
+              Company
+            </p>
+          </div>
+          <div class="footer-links">
+            <a href="about.html">About</a>
+            <a href="#">Team</a>
+            <a href="#">Mobile</a>
+          </div>
+        </div>
+        <div>
+          <div class="footer-text-3">
+            <p>
+              Contact
+            </p>
+          </div>
+          <div class="footer-links">
+            <a href="#">Help/FAQ</a>
+            <a href="contact.html">Contact</a>
+            <a href="#">Address </a>
+          </div>
+        </div>
+        <div>
+          <div class="footer-text-3">
+            <p>
+              More
+            </p>
+          </div>
+          <div class="footer-links">
+            <a href="destinations.html">Flights</a>
+            <a href="#">Hotels</a>
+            <a href="#">Booking</a>
+          </div>
+        </div>
+        <div class="discover">
+          <div>
+            <img src="img/facebook-icon.png" alt="facebook logo">
+            <img src="img/instagram-icon.png" alt="instagram logo">
+            <img src="img/twitter-icon.png" alt="twitter logo">
+          </div>
+          <div class="footer-text-4">
+            <p>
+              Discover our app
+            </p>
+          </div>
+          <div>
+            <img src="img/Google-Play.png" alt="Google Play Store">
+            <img src="img/app-Store.png" alt="Apple App Store">
+          </div>
+        </div>
+      </div>
+      <div class="copyrights">
+        <p class="footer-text-2">
+          All rights reserved@genZdevs.co
+        </p>
+      </div>
+    </section>
   </section>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
