--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
+
+<head>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
   <link rel='stylesheet'
     href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,9 +14,10 @@
     rel="stylesheet">
   <title style="font-family: Lexend;">Travigo | Contact Us</title>
   <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-     <header>
+</head>
+
+<body>
+  <header>
     <div class="logo">
       <a href="index.html">Travigo</a>
     </div>
@@ -38,7 +40,147 @@
     </div>
   </header>
   <!--Contact Us section-->
-  <section class="hero"></section>
+  <section class="hero" style="position:relative;">
+    <div class="contact-text">
+      <div class="home-text-1">
+        <p>
+          Contact Us
+        </p>
+      </div>
+      <div class="home-text-2" style="font-size: 18pt;font-weight: bold;">
+        <p>Need to get in touch with us , enter<br>your inquiry now !</p>
+      </div>
+    </div>
+    <div class="contact-forum">
+      <div>
+        <input type="text" placeholder="Full Name">
+        <input type="email" placeholder="Your Email">
+        <input type="text" placeholder="Message" style="padding-bottom: 150px;">
+      </div>
+      <div class="Submit">
+        <button>Submit</button>
+      </div>
+    </div>
+  </section>
+  <!--collaboration logos-->
+  <section class="logos">
+    <div>
+      <img src="img/axon-logo.png" alt="Axon Airlines" style="padding-bottom: 19px;">
+    </div>
+    <div>
+      <img src="img/jetsstar-logos.png" alt="Jetsstar" style="padding-bottom: 20px;">
+    </div>
+    <div>
+      <img src="img/expedia-logo.png" alt="Expedia" style="padding-bottom: 14px;">
+    </div>
+    <div>
+      <img src="img/qantas-logo.png" alt="qantas" style="padding-bottom: 30px;">
+    </div>
+    <div>
+      <img src="img/alitalia-logo.png" alt="alitalia" style="padding-bottom: 43px;">
+    </div>
+  </section>
+  <!--Newsletter Section-->
+  <section class="newslettre">
+    <div class="newsletter-contenu">
+      <img src="img/newslettre-background.png" alt="decoration" style="transform: scale(1.4);">
+      <div class="newslettre-text">
+        <p>
+          Subscribe to get information, latest news and other<br>
+          interesting offers about Travigo
+        </p>
+      </div>
+      <div class="submiting">
+        <div>
+          <input class="email" type="email" placeholder="Your email">
+        </div>
+        <div>
+          <button class="Subscribe">Subscribe</button>
+        </div>
+      </div>
+    </div>
+    <div class="send">
+      <img src="img/send.png" alt="send icon">
+    </div>
+    <div class="newslettre-decoration">
+      <img src="img/newslettre-decoration.png" alt="decoration" style="padding-right: 0px;">
+    </div>
+  </section>
+  <!--Footer-->
+  <section class="footer">
+    <div class="footer-column-1">
+      <div>
+        <div class="footer-text-1">
+          <a href="index.html">Travigo.</a>
+        </div>
+        <div class="footer-text-2">
+          <p>
+            Book your trip in minute, get full<br>
+            Control for much longer.
+
+          </p>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            Company
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="about.html">About</a>
+          <a href="#">Team</a>
+          <a href="#">Mobile</a>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            Contact
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="#">Help/FAQ</a>
+          <a href="contact.html">Contact</a>
+          <a href="#">Address </a>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            More
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="destinations.html">Flights</a>
+          <a href="#">Hotels</a>
+          <a href="#">Booking</a>
+        </div>
+      </div>
+      <div class="discover">
+        <div>
+          <img src="img/facebook-icon.png" alt="facebook logo">
+          <img src="img/instagram-icon.png" alt="instagram logo">
+          <img src="img/twitter-icon.png" alt="twitter logo">
+        </div>
+        <div class="footer-text-4">
+          <p>
+            Discover our app
+          </p>
+        </div>
+        <div>
+          <img src="img/Google-Play.png" alt="Google Play Store">
+          <img src="img/app-Store.png" alt="Apple App Store">
+        </div>
+      </div>
+    </div>
+    <div class="copyrights">
+      <p class="footer-text-2">
+        All rights reserved@genZdevs.co
+      </p>
+    </div>
+  </section>
   <script type="text/javascript" src="js/script.js"></script>
-  </body>
+</body>
+
 </html>
