--- a/about.html
+++ b/about.html
@@ -136,8 +136,7 @@
           <div class="footer-text-2">
             <p>
               Book your trip in minute, get full<br>
-              Control for much longer.
-
+              Control for much longer
             </p>
           </div>
         </div>
