--- a/sign-up.html
+++ b/sign-up.html
@@ -41,6 +41,186 @@
   </header>
   <!--Sign Up section-->
   <section class="hero">
+    <div class="Sign-up">
+      <div class="home-text-1" style="font-size: 38pt;">
+        <p>
+          Sign Up
+        </p>
+      </div>
+      <div class="sign-up-forum">
+        <div class="Full-name">
+          <input type="text" placeholder="First Name">
+          <input type="text" placeholder="Last Name">
+        </div>
+        <input type="text" placeholder="Username">
+        <input type="email" placeholder="Email">
+        <input type="text" placeholder="Password">
+        <input type="text" placeholder="Confirm Your Password">
+      </div>
+      <div>
+        <button>Sign Up</button>
+      </div>
+      <div class="home-text-2" style="font-weight: 400;padding-bottom: 0;">
+        <p>
+          If you have an account , <a style="color: #40CA7A;" href="login.html">Login</a> now!
+        </p>
+      </div>
+      <div class="lines">
+        <div>
+          <hr>
+        </div>
+        <div class="home-text-1" style="font-size: 24pt;">
+          <p>Or</p>
+        </div>
+        <div>
+          <hr>
+        </div>
+      </div>
+      <div class="other-sign-up">
+        <div class="other-sign-up-methodes">
+          <img src="img/google-icon.png" alt="Google icon">
+          <p class="other-sign-up-text">
+            Sign Up with google
+          </p>
+        </div>
+        <div class="other-sign-up-methodes">
+          <img src="img/facebook-blue-icon.png" alt="Facebook Icon">
+          <p class="other-sign-up-text">
+            Sign Up with facebook
+          </p>
+        </div>
+        <div class="other-sign-up-methodes">
+          <img src="img/twitter-x-icon.png" alt="X icon">
+          <p class="other-sign-up-text">
+            Sign Up with Twitter X
+          </p>
+        </div>
+        <div class="other-sign-up-methodes">
+          <img src="img/github-icon.png" alt="Github icon">
+          <p class="other-sign-up-text">
+            Sign Up with Github
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--collaboration logos-->
+  <section class="logos">
+    <div>
+      <img src="img/axon-logo.png" alt="Axon Airlines" style="padding-bottom: 19px;">
+    </div>
+    <div>
+      <img src="img/jetsstar-logos.png" alt="Jetsstar" style="padding-bottom: 20px;">
+    </div>
+    <div>
+      <img src="img/expedia-logo.png" alt="Expedia" style="padding-bottom: 14px;">
+    </div>
+    <div>
+      <img src="img/qantas-logo.png" alt="qantas" style="padding-bottom: 30px;">
+    </div>
+    <div>
+      <img src="img/alitalia-logo.png" alt="alitalia" style="padding-bottom: 43px;">
+    </div>
+  </section>
+  <!--Newsletter Section-->
+  <section class="newslettre">
+    <div class="newsletter-contenu">
+      <img src="img/newslettre-background.png" alt="decoration" style="transform: scale(1.4);">
+      <div class="newslettre-text">
+        <p>
+          Subscribe to get information, latest news and other<br>
+          interesting offers about Travigo
+        </p>
+      </div>
+      <div class="submiting">
+        <div>
+          <input class="email" type="email" placeholder="Your email">
+        </div>
+        <div>
+          <button class="Subscribe">Subscribe</button>
+        </div>
+      </div>
+    </div>
+    <div class="send">
+      <img src="img/send.png" alt="send icon">
+    </div>
+    <div class="newslettre-decoration">
+      <img src="img/newslettre-decoration.png" alt="decoration" style="padding-right: 0px;">
+    </div>
+  </section>
+  <!--Footer-->
+  <section class="footer">
+    <div class="footer-column-1">
+      <div>
+        <div class="footer-text-1">
+          <a href="index.html">Travigo.</a>
+        </div>
+        <div class="footer-text-2">
+          <p>
+            Book your trip in minute, get full<br>
+            Control for much longer.
+
+          </p>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            Company
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="about.html">About</a>
+          <a href="#">Team</a>
+          <a href="#">Mobile</a>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            Contact
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="#">Help/FAQ</a>
+          <a href="contact.html">Contact</a>
+          <a href="#">Address </a>
+        </div>
+      </div>
+      <div>
+        <div class="footer-text-3">
+          <p>
+            More
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="destinations.html">Flights</a>
+          <a href="#">Hotels</a>
+          <a href="#">Booking</a>
+        </div>
+      </div>
+      <div class="discover">
+        <div>
+          <img src="img/facebook-icon.png" alt="facebook logo">
+          <img src="img/instagram-icon.png" alt="instagram logo">
+          <img src="img/twitter-icon.png" alt="twitter logo">
+        </div>
+        <div class="footer-text-4">
+          <p>
+            Discover our app
+          </p>
+        </div>
+        <div>
+          <img src="img/Google-Play.png" alt="Google Play Store">
+          <img src="img/app-Store.png" alt="Apple App Store">
+        </div>
+      </div>
+    </div>
+    <div class="copyrights">
+      <p class="footer-text-2">
+        All rights reserved@genZdevs.co
+      </p>
+    </div>
   </section>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
