--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       </p>
     </div>
   </section>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
