--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </div>
         <div class="hero-buttons">
           <div style="padding-right:40px ;">
-            <button class="hero-text-button"> <a href="about.html" style="color: white;">Find out more</a></button>
+            <button class="hero-text-button" onclick="document.location='about.html'" style="color: white;">Find out
+              more</button>
           </div>
           <div class="play-demo-all">
             <div class="play-demo">
@@ -173,7 +174,6 @@
         <img src="img/full-europe.png" alt="helsinki cathedrale">
         <img class="img-text" src="img/full-europe-text.png" alt="helsinki cathedrale">
       </div>
-    </div>
     </div>
   </section>
   <section class="booking">
